--- a/client/index.html
+++ b/client/index.html
@@ -4,8 +4,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
-        <title>Bearded Robot Proto</title>
-        <meta name="description" content="Responsive Admin Web App">
+        <title>Bearded Robot Prototype</title>
+        <meta name="description" content="Simflofy Responsive UI Web App">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
         <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
