updated a lot of demo content

--- a/client/index.html
+++ b/client/index.html
@@ -41,7 +41,7 @@
                  data-ng-controller="HeaderCtrl"
                  data-ng-intro-options="introOptions"
                  data-ng-intro-method="startIntro"
-                 data-ng-intro-autostart="true"></section>
+                 data-ng-intro-autostart="false"></section>
 
         <div class="main-container">
             <aside data-ng-include=" 'views/nav.html' "
