Change css being called to include only files that exist.

--- a/app/index.html
+++ b/app/index.html
@@ -17,8 +17,8 @@
             
             <!-- build:css({.tmp,client}) styles/main.css -->
             <link rel="stylesheet" href="styles/bootstrap.css">
+            <link rel="stylesheet" href="styles/plugins.css">
             <link rel="stylesheet" href="styles/ui.css">
-            <link rel="stylesheet" href="styles/main.css">
             <!-- endbuild -->
 
     </head>
