removed Task from nav, index, app, and NavCtrl, since it is being a booger, see issue #3

--- a/app/index.html
+++ b/app/index.html
@@ -116,7 +116,12 @@
         <script src="scripts/Form/FormValidation.js"></script>
         <script src="scripts/Table/TableCtrl.js"></script>
         <script src="scripts/UI/Map.js"></script>
+        <!-- *** removing Tasks.js until this issue is fixed
+             *** https://github.com/BeardandFedora/HopStack/issues/3
+             *** 
         <script src="scripts/Task/Task.js"></script>
+             ***
+         -->
         <script src="scripts/Chart/ChartCtrl.js"></script>
         <script src="scripts/Chart/ChartDirective.js"></script>
         <script src="scripts/Page/PageCtrl.js"></script>
